remove redundant title tags

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <div class="large-menu__image">
               <img src="./dist/assets/images/salmon-spaghetti.webp"
                 onerror="this.onerror=null; this.src='./dist/assets/images/salmon-spaghetti.jpeg';"
-                alt="Salmon Spaghetti" title="Salmon Spaghetti" loading="lazy">
+                alt="Salmon Spaghetti" loading="lazy">
               <p class="large-menu__image-description">Salmon Spaghetti</p>
             </div>
           </div>
@@ -249,7 +249,7 @@
             <div class="large-menu__image">
               <img src="./dist/assets/images/thai-pineapple-fried-rice.webp"
                 onerror="this.onerror=null; this.src='./dist/assets/images/thai-pineapple-fried-rice.jpeg';"
-                alt="Thai Pineapple Fried Rice" title="Thai Pineapple Fried Rice" loading="lazy">
+                alt="Thai Pineapple Fried Rice" loading="lazy">
               <p class="large-menu__image-description">Thai Pineapple Fried Rice</p>
             </div>
           </div>
@@ -270,7 +270,7 @@
             <div class="large-menu__image">
               <img src="./dist/assets/images/satay-chicken-skewers.webp"
                 onerror="this.onerror=null; this.src='./dist/assets/images/satay-chicken-skewers.jpeg';"
-                alt="Satay Chicken Skewers" title="Satay Chicken Skewers" loading="lazy">
+                alt="Satay Chicken Skewers" loading="lazy">
               <p class="large-menu__image-description">Satay Chicken Skewers</p>
             </div>
           </div>
@@ -285,7 +285,7 @@
                 aria-roledescription="slide" aria-label="Slide 1 of 3">
                 <img class="small-menu__carousel__image" src="./dist/assets/images/salmon-spaghetti.webp"
                   onerror="this.onerror=null; this.src='./dist/assets/images/salmon-spaghetti.jpeg';"
-                  alt="Salmon Spaghetti" title="Salmon Spaghetti" loading="lazy">
+                  alt="Salmon Spaghetti" loading="lazy">
                 <div class="small-menu__image-description">Salmon Spaghetti</div>
               </div>
 
@@ -293,7 +293,7 @@
                 aria-roledescription="slide" aria-label="Slide 2 of 3">
                 <img class="small-menu__carousel__image" src="./dist/assets/images/thai-pineapple-fried-rice.webp"
                   onerror="this.onerror=null; this.src='./dist/assets/images/thai-pineapple-fried-rice.jpeg';"
-                  alt="Thai Pineapple Fried Rice" title="Thai Pineapple Fried Rice" loading="lazy">
+                  alt="Thai Pineapple Fried Rice" loading="lazy">
                 <div class="small-menu__image-description">Thai Pineapple Fried Rice</div>
               </div>
 
@@ -301,7 +301,7 @@
                 aria-roledescription="slide" aria-label="Slide 3 of 3">
                 <img class="small-menu__carousel__image" src="./dist/assets/images/satay-chicken-skewers.webp"
                   onerror="this.onerror=null; this.src='./dist/assets/images/satay-chicken-skewers.jpeg';"
-                  alt="Satay Chicken Skewers" title="Satay Chicken Skewers" loading="lazy">
+                  alt="Satay Chicken Skewers" loading="lazy">
                 <div class="small-menu__image-description">Satay Chicken Skewers</div>
               </div>
             </div>
