--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="rgb(172, 113, 42)" />
-  <meta name='robots' content='max-image-preview:large' />
+  <meta name="theme-color" content="rgb(172, 113, 42)">
+  <meta name='robots' content='max-image-preview:large'>
   <meta name="keywords" content="R2 Place, restaurant, food, fusion, asian, lunch, dinner, relax, recharge">
   <meta name="description" content="A place to Relax and Recharge.">
   <meta name="twitter:card" content="summary_large_image">
@@ -18,14 +18,14 @@
   <!-- <meta itemprop="description" content="A place to Relax and Recharge.">
   <meta itemprop="url" content="https://mtw72.github.io/R2-revising/"> -->
 
-  <meta property="og:url" content="https://mtw72.github.io/R2-revising/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="R2 Place" />
-  <meta property="og:description" content="A place to Relax and Recharge." />
-  <meta property="og:locale" content="en_GB" />
-  <meta property="og:image:secure_url" content="https://mtw72.github.io/R2-revising/images/og-image.jpeg" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
+  <meta property="og:url" content="https://mtw72.github.io/R2-revising/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="R2 Place">
+  <meta property="og:description" content="A place to Relax and Recharge.">
+  <meta property="og:locale" content="en_GB">
+  <meta property="og:image:secure_url" content="https://mtw72.github.io/R2-revising/images/og-image.jpeg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
 
   <link rel="icon" type="image/x-icon" href="./dist/assets/images/R2.png">
   <link rel="canonical" href="https://mtw72.github.io/R2-revising/">
@@ -375,8 +375,8 @@
                 <label for="ppl">Number of Guest(s)<span class="mandatory-field"
                     aria-hidden="true">&nbsp;*</span></label>
                 <select class="select-control" id="ppl" name="ppl" required aria-required="true"
-                  title="Please select the number of guest(s)" placeholder="1">
-                  <option value="1">1</option>
+                  title="Please select the number of guest(s)">
+                  <option value="1" placeholder="1">1</option>
                   <option value="2">2</option>
                   <option value="3">3</option>
                   <option value="4">4</option>
