remove redundant title tag

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
               <source media="(min-width: 575.5px)" srcset="./dist/assets/images/r2place-entrance-md.jpeg">
               <img src="./dist/assets/images/r2place-entrance-sm.webp"
                 onerror="this.onerror=null; this.src='./dist/assets/images/r2place-entrance-sm.jpeg';"
-                alt="R2 Place Entrance" title="R2 Place Entrance" loading="lazy">
+                alt="R2 Place Entrance" loading="lazy">
             </picture>
           </div>
 
